# ExFrame

./: .dockerignore  .env  .env.example  .envd  .gitignore  =2.14.0  ANNOTATION_OBSIDIAN_INTEGRATION.md  ANNOTATION_PHILOSOPHY.md  ANNOTATION_SYSTEM_SETUP.md  ARCHITECTURE.md  ARCHITECTURE_SEPARATION.md  ASSESSMENT_DOMAINS_GUIDE.md  BRAINUSE_INSTALL.md  BRAIN_RATING.md  BRAVE_SEARCH_INTEGRATION.md  BREAKAGE_SUMMARY.md  CHANGELOG.md  CLEANUP_REPORT.md  CLEAN_ARCHITECTURE.md  CONSOLIDATION_COMPLETE.md  CONSOLIDATION_PLAN.md  CURRENT_STATE.md  CURRENT_SYSTEM_STATE.md  Cognitive decline measurement.md  Creation myth exframe style.md  DASHBOARD_READY.md  DATABASE_MIGRATION.md  DEPENDENCY_LICENSES.md  DMR-docs.md  DMR_API_REFERENCE.md  DOCS_CLEANUP_PLAN.md  DOCUMENTATION_UPDATE.md  DOCUMENT_INDEX_MAINTENANCE.md  DOMAIN_ARCHETYPES.md  DOMAIN_TYPES_SIMPLIFIED.md  Dockerfile  EEFrame-product.md  EMBEDDING_FINDINGS.md  EXTENSION_POINTS.md  ExFrame-product.md  (+124 more)
.obsidian/: workspace.json
archive/chat_system/: CHAT_README.md  ChatWindow.css  ChatWindow.jsx  chat_api.py  chat_client.py  chat_read.py  chat_send.py
archive/docs/: CHAT_QUICKSTART.md  OMV-copilot-sonnet-suggestions.md  counter-proposal.md  expertise_enhancement_framework_omv.md  expertise_enhancement_framework_omv_v2.md  expertise_scanner_plan.md  folk_expertise_implementation_plan.md  generic-domain-framework.md  meta_implementation_plan.md  nodes.md  scanner-design.md  scanner-quickref.md  state-analogy.md  three-way-chat-system.md  three-way-protocol.md
autonomous_learning/: __init__.py
autonomous_learning/api/: __init__.py  app.py  certification.py  scraping.py  supervisor.py  surveys.py
autonomous_learning/core/: config.py  logger.py  state.py
config/: autonomous_learning.yaml
config/loki/: config.yml
config/prometheus/: prometheus.yml  recording_rules.yml
config/promtail/: config.yml
creative/essays/: easy-recipe.md  university.md
data/personas/: api_librarian.md  cloud_librarian.md  leadership_librarian.md
design/: UNIVERSAL_LOGGING_DESIGN.md  human-notes.md  panel-plan.md  panel.md
docs/: 01-system-architecture.md  02-domain-co-pilot-guide.md  03-expertise-scanner-guide.md  05-api-reference.md  06-pattern-catalog.md  07-development-guide.md  ACCUMULATOR_DESIGN.md  HUMAN_NOTES_IMPLEMENTATION.md  INDEX.md  PHASE1_PERSONA_DESIGN.md  PHASE2_SEMANTIC_DOCS.md  PLUGIN_REFACTOR_DESIGN.md  README.md  WISEMAN_ARCHITECTURE.md  WISEMAN_DESIGN.md  WISEMAN_IMPLEMENTATION_GUIDE.md  exframe_roles.md
docs/architecture/: overview.md
docs/guides/: domain-types.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
generic_framework/: DYNAMIC_DOMAIN_REFACTOR.md  test_cooking_domain.py  test_llm_consciousness_domain.py
pattern-inbox/: recipe_creamy_tuscan_chicken.json  recipe_easy_chicken_casserole.json  recipe_easy_creamy_chicken_casserole.json  recipe_easy_mediterranean_baked_chicken.json  recipe_eggplant_parmesan_casserole.json  recipe_famous_butter_chicken.json  recipe_good_easy_garlic_chicken.json  recipe_honey_glazed_chicken.json  recipe_pan_roasted_chicken_breasts.json  recipe_quick_chicken_piccata.json  recipe_simple_lemon_herb_chicken.json  recipe_spicy_garlic_lime_chicken.json  recipe_test_casserole.json  recipe_three_ingredient_baked_chicken.json
patterns/: manual.yaml
scripts/: README.md  add_persona_to_domains.py  add_wiseman_configs.sh  analyze_depth.py  analyze_patterns.py  cleanup_garbage_patterns.py  concept_timeline.py  diagnose_performance.sh  dump_allrecipes_survey.py  dump_surveyor_content.py  find_related.py  monitor_gpu.sh  safe_cleanup.py  show_sessions.py  synthesize_test_candidate.py  test_model_runner.sh  trace_chain.py  verify_separation.sh  view_history.py
tao/: __init__.py
tests/: run_statemachine_tests.sh  test_phase1.py  test_statemachine.py
(+336 files in other folders)
